# time_tracker

./: Cargo.toml  LICENSE.md  README.md  TODO.md  dist-workspace.toml
data/: sessions.db  sessions.db-shm  sessions.db-wal
src/: agent.rs  app.rs  main.rs  storage.rs  ui.rs
src/agent/: core.rs  input.rs  mod.rs  sessions.rs  tasks.rs  time.rs
src/app/: mod.rs  startup.rs  state.rs  types.rs
src/config/: settings.rs
src/storage/: schema.sql  sqlite.rs
src/ui/: mod.rs  tray.rs  utils.rs  viewmodels.rs  window.rs  windows.rs
src/utils/: time.rs
wix/: main.wxs
