[package]
name = "time_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
eframe = "0.33"
egui = "0.33"
rdev = "0.5"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
crossbeam-channel = "0.5"
winapi = "0.3"
tray-icon = "0.21"
image = "0.25"