[package]
name = "time_tracker"
version = "0.1.0-alpha.2"
edition = "2024"
authors = ["JodusMelodus"]
description = "Lightweight background Time Tracker"
repository = "https://github.com/Jodus-Melodus/time_tracker"

[package.metadata.wix]
upgrade-guid = "2B9EFA9C-CE83-4181-A564-BA7284B000A4"
path-guid = "7AA7D695-6673-40A2-8498-45B4C86B9D44"
license = false
eula = false

[dependencies]
chrono = "0.4"
eframe = "0.33"
egui = "0.33"
rdev = "0.5"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
crossbeam-channel = "0.5"
winapi = "0.3"
tray-icon = "0.21"
image = "0.25"
uuid = { version = "1.19.0", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
